# actix-sqlx-mysql

./: .env  Cargo.toml  README.md
scripts/: consume_actix_api.sql  create_db.sh  init.sql
src/: custom_error.rs  custom_sqlx_error.rs  hasher.rs  main.rs  models.rs  role_handler.rs  tests.rs
